# openstreetmap-cgimap

./: .clang-format  CMakeLists.txt  Dockerfile  Dockerfile2204  Dockerfile_bookworm  Dockerfile_trixie  lighttpd.conf.in
.github/workflows/: docker_2004.yml  docker_2204.yml  docker_2410.yml  docker_bookworm.yml  docker_trixie.yml
cmake/: BuildLint.cmake
contrib/: CMakeLists.txt
docker/debian/: Dockerfile_bookworm  Dockerfile_trixie
docker/ubuntu/: Dockerfile  Dockerfile2204  Dockerfile2404  Dockerfile2410
include/cgimap/: data_selection.hpp  http.hpp  oauth2.hpp  output_formatter.hpp  types.hpp  util.hpp  zlib.hpp
include/cgimap/api06/changeset_upload/: changeset_updater.hpp
include/cgimap/api07/: map_handler.hpp
include/cgimap/backend/apidb/: changeset.hpp  common_pgsql_selection.hpp  pqxx_string_traits.hpp  readonly_pgsql_selection.hpp  transaction_manager.hpp
include/cgimap/backend/apidb/changeset_upload/: changeset_updater.hpp  node_updater.hpp  way_updater.hpp
include/cgimap/plugins/: cgimap_plugin.hpp  hook.hpp  hooks.hpp  plugin_registry.hpp
plugins/: CMakeLists.txt  cgimap_plugin.hpp
plugins/foo/: CMakeLists.txt  foo.cpp
src/: CMakeLists.txt  Makefile.am  backend.cpp  basicauth.cpp  choose_formatter.cpp  http.cpp  main.cpp  oauth.cpp  oauth2.cpp  osm_current_responder.cpp  osm_responder.cpp  osmchange_responder.cpp  output_formatter.cpp  plugin_registry.cpp  process_request.cpp  routes.cpp  text_formatter.cpp  text_responder.cpp  xml_formatter.cpp
src/api06/: changeset_close_handler.cpp  changeset_create_handler.cpp  changeset_download_handler.cpp  changeset_handler.cpp  changeset_update_handler.cpp  changeset_upload_handler.cpp
src/api06/changeset_upload/: osmchange_handler.cpp
src/backend/apidb/: CMakeLists.txt  changeset.cpp  common_pgsql_selection.cpp  pgsql_update.cpp  readonly_pgsql_selection.cpp  transaction_manager.cpp
src/backend/apidb/changeset_upload/: changeset_updater.cpp  node_updater.cpp  way_updater.cpp
src/plugins/: hooks.cpp
test/: CMakeLists.txt  staticxml.cpp  staticxml.hpp  test_apidb_backend_changesets.cpp  test_apidb_backend_historic.cpp  test_apidb_backend_nodes.cpp  test_apidb_backend_oauth.cpp  test_apidb_backend_oauth2.cpp  test_core.cpp  test_database.cpp  test_database.hpp  test_empty_selection.hpp  test_oauth2.cpp  test_parse_osmchange_input.cpp
test/changesets.testcore/: data.osm  read_discussion_multiple.case  read_discussion_multiple_json.case
test/relation.testcore/: data.osm  relation_1.case  relations.case
